# RefinedRust

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  dune  flake.nix  rust-toolchain.toml
case_studies/: dune-project
docs/: shims.md  (+4 more)
rr_frontend/: .rustfmt.toml  Cargo.toml  cargo-workspace.unused  deny.toml  dune-project  refinedrust  rust-toolchain.toml
rr_frontend/.cargo/: config.toml
rr_frontend/analysis/: Cargo.toml  README.md
rr_frontend/analysis/src/: analysis_error.rs  lib.rs  mir_utils.rs  pointwise_state.rs
rr_frontend/analysis/src/abstract_interpretation/: abstract_state.rs  fixpoint_engine.rs
rr_frontend/analysis/src/domains/: mod.rs
rr_frontend/analysis/src/domains/definitely_accessible/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/definitely_allocated/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/definitely_initialized/: analysis.rs  mod.rs  state.rs  utils.rs
rr_frontend/analysis/src/domains/framing/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/maybe_borrowed/: analysis.rs  state.rs
rr_frontend/analysis/testbins/analysis_driver/: Cargo.toml
rr_frontend/analysis/tests/: test_accessibility.rs  test_analysis.rs  utils.rs
rr_frontend/attribute_parse/: Cargo.toml
rr_frontend/attribute_parse/src/: parse.rs
rr_frontend/radium/: Cargo.toml
rr_frontend/radium/src/: code.rs  lang.rs  lib.rs  model.rs  specs.rs  term.rs
rr_frontend/radium/src/coq/: binder.rs  command.rs  eval.rs  inductive.rs  iris.rs  ltac.rs  mod.rs  module.rs  proof.rs  section.rs  syntax.rs  term.rs
rr_frontend/radium/src/specs/: enums.rs  functions.rs  invariants.rs  mod.rs  structs.rs  traits.rs  types.rs
rr_frontend/refinedrust_frontend/: Cargo.toml  build.rs
rr_frontend/refinedrust_frontend/src/: command.rs  lib.rs
rr_frontend/refinedrust_frontend/tests/: runner.rs
rr_frontend/refinedrust_frontend/tests/deps_build/: Cargo.toml  dune-project
rr_frontend/rr_rustc_interface/src/: lib.rs
rr_frontend/rrconfig/: Cargo.toml
rr_frontend/rrconfig/src/: arg_value.rs  lib.rs
rr_frontend/tests/: Cargo.toml
rr_frontend/tests/fail/: no-assume-but-only-spec.rs  no-assume-but-only-spec.stderr
rr_frontend/tests/tests/: ui.rs
rr_frontend/translation/: Cargo.toml
rr_frontend/translation/src/: arg_folder.rs  attrs.rs  base.rs  closure_impl_generator.rs  consts.rs  data.rs  error.rs  function_body.rs  lib.rs  procedures.rs  rustcmp.rs  search.rs  trait_registry.rs  type_translator.rs  unification.rs  utils.rs
rr_frontend/translation/src/body/: checked_op_analysis.rs  mod.rs  signature.rs  translator.rs
rr_frontend/translation/src/environment/: collect_closure_defs_visitor.rs  collect_prusti_spec_visitor.rs  dump_borrowck_info.rs  loops.rs  mir_storage.rs  mod.rs  polonius_info.rs  procedure.rs  region_folder.rs
rr_frontend/translation/src/regions/: arg_folder.rs  assignment.rs  calls.rs  composite.rs  inclusion_tracker.rs  init.rs  mod.rs  region_bi_folder.rs
rr_frontend/translation/src/shims/: flat.rs  mod.rs  registry.rs
rr_frontend/translation/src/spec_parsers/: const_attr_parser.rs  crate_attr_parser.rs  enum_spec_parser.rs  loop_attr_parser.rs  mod.rs  module_attr_parser.rs  parse_utils.rs  struct_spec_parser.rs  trait_attr_parser.rs  trait_impl_attr_parser.rs  verbose_function_spec_parser.rs
rr_frontend/translation/src/traits/: mod.rs  region_bi_folder.rs  registry.rs  requirements.rs  resolution.rs
rr_frontend/translation/src/types/: local.rs  mod.rs  scope.rs  translator.rs  tyvars.rs
stdlib/alloc/theories/: _RocqProject  dune  dune-project  layout.v  shims.v
stdlib/rr_internal/theories/: _RocqProject  dune  dune-project  shims.v
theories/: dune-project  refinedrust.opam
theories/caesium/: _RocqProject  base.v  char.v  derived.v  dune  ghost_state.v  heap.v  int_type.v  lang.v  layout.v  lifting.v  loc.v  notation.v  proofmode.v  struct.v  syntypes.v  tactics.v  time.v  val.v
theories/caesium/config/: dune
theories/caesium/physical_step/: _RocqProject  dune  logical_step.v  physical_step.v  time_receipts.v  tr_view.v
theories/caesium/program_logic/: _RocqProject  adequacy.v  dune  ectx_lifting.v  lifting.v  weakestpre.v
theories/lithium/: .simpl_instances.v.un~  Z_bitblast.v  _RocqProject  base.v  boringly.v  definitions.v  dune  hooks.v  instances.v  interpreter.v  normalize.v  proof_state.v  pure_definitions.v  simpl_classes.v  simpl_instances.v  simpl_instances.v~  solvers.v  syntax.v
theories/lithium/benchmarks/: _RocqProject  dune
theories/rust_typing/: _RocqProject  adequacy.v  alias_ptr.v  annotations.v  arrays.v  automation.v  axioms.v  base.v  box.v  debug.v  dfrac_agree.v  dune  enum.v  existentials.v  existentials_na.v  existentials_na_test.v  fixpoint.v  fraction_counting.v  functions.v  generics.v  ghost_var_dfrac.v  gvar_refinement.v  hlist.v  int.v  int_rules.v  integration_tests.v  lft_contexts.v  ltype_rules.v  ltypes.v  manual.v  maybe_uninit.v  memcasts.v  mut_ref.v  offset_ptr.v  options.v  owned_ptr.v  pinned_borrows.v  products.v  program_rules.v  programs.v  (+14 more)
theories/rust_typing/array/: _RocqProject  access.v  array.v  def.v  dune  place.v  resolve_ghost.v  stratify.v  subltype.v  subtype.v  subtype_instances.v  unfold.v  value.v
theories/rust_typing/automation/: _RocqProject  dune  existentials.v  ident_to_string.v  layout_ltac.v  loc_eq.v  loc_related.v  loops.v  proof_state.v  simpl.v  solvers.v
theories/rust_typing/enum/: _RocqProject  def.v  deinit.v  discriminant.v  dune  enum.v  init.v  place.v  subltype.v  subtype.v  unfold.v
theories/rust_typing/mut_ref/: _RocqProject  borrow.v  def.v  deinit.v  dune  mut_ref.v  place.v  resolve_ghost.v  stratify.v  subltype.v  subtype.v  subtype_instances.v  unfold.v
theories/rust_typing/shr_ref/: _RocqProject  borrow.v  def.v  deinit.v  dune  place.v  shr_ref.v  stratify.v  subltype.v  subtype.v  subtype_instances.v  unfold.v
theories/rust_typing/struct/: _RocqProject  def.v  deinit.v  dune  init.v  place.v  resolve_ghost.v  stratify.v  struct.v  subltype.v  subtype.v  subtype_instances.v  unfold.v
(+548 files in other folders)
