[workspace]
members = [
    "analysis",
    "annotations",
    "attribute_parse",
    "radium",
    "refinedrust_frontend",
    "rr_rustc_interface",
    "rrconfig",
    "translation",
    "tests"
]
resolver = "2"

[workspace.dependencies]
analysis.path = "analysis"
attribute_parse.path = "attribute_parse"
radium.path = "radium"
rr_rustc_interface.path = "rr_rustc_interface"
rrconfig.path = "rrconfig"
translation.path = "translation"

compiletest_rs = "0.11"
config = { version = "0.15", default-features = false, features = ["toml"] }
ctrlc = "3"
datafrog = "2"
derive_more = { version = "2", features = ["constructor", "debug", "deref", "deref_mut", "display", "from", "into"] }
env_logger = { version = "0.11" }
glob = "0.3"
indent_write = "2"
indoc = "2"
log = "0.4"
nom = "8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
toml = "0.9"
topological-sort = "0.2"
transitive = "1"
typed-arena = "2"
ui_test = "0.30"
which = "8"

[workspace.package]
edition = "2024"
repository = "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
version = "0.1.0"
