opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
homepage: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
bug-reports: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
maintainer: "RefinedRust contributors"
authors: "RefinedRust contributors"
description: """
RefinedRust is a prototype framework for verifying safe and unsafe Rust code.
"""
license: "BSD-3-Clause"

depends: [
  "rocq-core" { (= "9.0.0" ) }
  "rocq-stdlib"
  "rocq-stdpp-unstable"
  "coq-iris"
  "coq-iris-contrib"
  "coq-lifetime-logic"
  "dune" {>= "3.16.1"}
  "rocq-equations" { (= "1.3.1+9.0") }
]

pin-depends: [
  ["coq-iris.dev" "git+https://gitlab.mpi-sws.org/iris/iris.git#3e83a7affa51b91aa1eaab1fc0d8a68e5a38b221"]
  ["coq-iris-contrib.dev" "git+https://gitlab.mpi-sws.org/iris/iris-contrib.git#3e6d47d0bc5717791f14b1efa86637fe59d358ee"]
  ["coq-lifetime-logic.dev" "git+https://gitlab.mpi-sws.org/iris/lambda-rust.git#a13bc8df1c0d9824d6fe51f9572f6485c5ce4fab"]
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
