opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
homepage: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
bug-reports: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
maintainer: "RefinedRust contributors"
authors: "RefinedRust contributors"
description: """
RefinedRust is a prototype framework for verifying safe and unsafe Rust code.
"""
license: "BSD-3-Clause"

depends: [
  "rocq-core" { (= "9.1.0" ) }
  "rocq-stdlib"
  "rocq-stdpp"
  "rocq-stdpp-unstable"
  "rocq-stdpp-bitvector"
  "rocq-iris"
  "coq-iris-contrib"
  "coq-lifetime-logic"
  "dune" {>= "3.16.1"}
  "rocq-equations" { (= "1.3.1+9.1") }
]

pin-depends: [
  ["rocq-stdpp.dev" "git+https://gitlab.mpi-sws.org/iris/stdpp.git#ec795ece9125d60d9974e15fc52f3dfe91ae3f4b"]
  ["rocq-stdpp-unstable.dev" "git+https://gitlab.mpi-sws.org/iris/stdpp.git#ec795ece9125d60d9974e15fc52f3dfe91ae3f4b"]
  ["rocq-stdpp-bitvector.dev" "git+https://gitlab.mpi-sws.org/iris/stdpp.git#ec795ece9125d60d9974e15fc52f3dfe91ae3f4b"]
  ["rocq-iris.dev" "git+https://gitlab.mpi-sws.org/iris/iris.git#6b080cdd7a145cd5cbb2b7d8b17adf6ee2ca8f08"]
  ["coq-iris-contrib.dev" "git+https://gitlab.mpi-sws.org/iris/iris-contrib.git#6c7ba2fb49b0849ebc6c4476e1d11ffce534d4fd"]
  ["coq-lifetime-logic.dev" "git+https://gitlab.mpi-sws.org/iris/lambda-rust.git#8e401c363dc8e4337afcadce832e0cef9dc33a7c"]
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
