[package]
name = "analysis"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"

edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rr_rustc_interface.workspace = true

serde.workspace = true

[dev-dependencies]
compiletest_rs.workspace = true
glob.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
