(coq.theory
(flags -w -notation-overridden -w -redundant-canonical-projection)
(package stdlib-alloc-theories)
(name rrstd.alloc.theories)
(theories stdpp iris iris_contrib Ltac2 Equations lrust caesium lithium refinedrust rrstd.mem.theories rrstd.mem.mem.generated rrstd.ptr.theories rrstd.ptr.ptr.generated Stdlib))
